--- a/workshop/package.json
+++ b/workshop/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "sqlite3": "^5.0.0" 
   }
 }
